--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -17,13 +17,16 @@
     "@mapbox/polyline": "^1.2.1",
     "@mui/material": "^5.15.17",
     "@stripe/stripe-js": "^3.4.0",
+    "chartjs": "^0.3.24",
     "framer-motion": "^11.11.11",
     "mapbox-gl": "^3.3.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-map-gl": "^7.1.7",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/mapbox__polyline": "^1.0.5",
