--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.3.0",
     "react-map-gl": "^7.1.7",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "stringee-chat-js-sdk": "^0.2.0"
   },
   "devDependencies": {
     "@types/mapbox__polyline": "^1.0.5",
